fix alignment shop product

--- a/src/components/page-components/main/shop/style.module.css
+++ b/src/components/page-components/main/shop/style.module.css
@@ -66,6 +66,8 @@
   --productsct-rgap: 1rem;
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   column-gap: 1rem;
   row-gap: var(--productsct-rgap);
   margin-block: var(--productsct-my);
